--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -70,7 +70,7 @@ a {
 }
 
 a:link {
-	color: #000;
+	color: #0A195D;
 }
 
 a:active {
@@ -2318,7 +2318,7 @@ button > span,
 }
 
 .header--white.onovo-header.sticky {
-	background-color: #0A195D;
+	background-color: #214D9E;
 }
 
 .onovo-header .row > div:first-child {
@@ -3042,7 +3042,7 @@ a.onovo-menu-btn,
 }
 
 .onovo-footer.footer--dark {
-	background: #000;
+	background: #0A195D;
 }
 
 .onovo-footer.footer--white {
@@ -4039,7 +4039,7 @@ ul.onovo-footer-menu li {
 
 .onovo-service-grid-item .image img {
 	width: auto;
-	max-height: 60px;
+	max-height: 85px;
 }
 
 .onovo-services-grid-fw .onovo-service-grid-item.active::before {
