--- a/src/styles/scss/settings.module.scss
+++ b/src/styles/scss/settings.module.scss
@@ -3,9 +3,9 @@
 ---*/
 
 /* --Fonts Family */
-$text_font_family: "Nourd"; /* - paragraphs font */
-$heading_font_family: "Nourd_Bold"; /* - headings font */
-$btn_font_family: "Nourd"; /* - buttons font */
+$text_font_family: "Rubik"; /* - paragraphs font */
+$heading_font_family: "Rubik"; /* - headings font */
+$btn_font_family: "Rubik"; /* - buttons font */
 
 /* --Template Colors */
 $theme_bg_color: #EDEFF0; /* - background color */
