--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -7977,14 +7977,13 @@ h6,
 
 	.iconSection {
 		display: flex;
-		justify-content: space-around;
-		margin-top: 10px;
-		margin-bottom: 10px;
+		justify-content: center;
+		margin: 10px 4px 10px 4px;
 		flex-wrap: wrap;
 
 		.iconColumn {
-			flex: 1 1 20%;
-			max-width: 20%;
+			flex: 1 1 33%;
+			max-width: 33%;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -8009,7 +8008,7 @@ h6,
 		}
 
 		.iconTitle {
-			font-size: 0.5rem;
+			font-size: 0.7rem;
 			text-align: center;
 			text-transform: uppercase;
 		}
